testing fix for navigation on mobile menu

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -159,7 +159,9 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    justify-content: center;
+    height: 100vh;
+    z-index: 100;
 }
 
 .navigation__items li {
